[tool.poetry]
name = "database"
version = "0.1.0"
description = ""
authors = ["edmondburnett <_@edmondburnett.com>"]
packages = [{ include = "pythonmono/database" }]

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = "^0.23.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
